# LooseProjects

./: .gitignore  README.md
SourceCodeAnalyzer/: CMakeLists.txt  config.hpp.in
SourceCodeAnalyzer/include/scan/: arguments.hpp
SourceCodeAnalyzer/include/scan/ProgramArguments/: ArgumentDescriptor.hpp  ArgumentDescriptor.inl  ArgumentDictionary.hpp  ArgumentDictionary.inl  ArgumentParser.hpp  ProgramArguments.hpp
SourceCodeAnalyzer/src/: arguments.cpp  main.cpp
SourceCodeAnalyzer/src/ProgramArguments/: ArgumentDescriptor.cpp  ArgumentDictionary.cpp
SourceCodeFinder/: main.cpp
